--- a/index.html
+++ b/index.html
@@ -126,16 +126,17 @@
         }
 
         .build-card {
-            background-color: #141516;
-            border: 3px solid #7e7568;
-            border-radius: 8px;
-            padding: 0;
-            cursor: pointer;
-            transition: transform 0.2s, border-color 0.2s;
-            height: 300px;
-            display: flex;
-            flex-direction: column;
-        }
+    	background-color: #141516;
+    	border: 3px solid #7e7568;
+    	border-radius: 8px;
+    	padding: 0;
+    	cursor: pointer;
+    	transition: transform 0.2s, border-color 0.2s;
+    	height: 300px;
+    	display: flex;
+    	flex-direction: column;
+    	overflow: hidden;
+		}
 
         .build-card:hover {
             transform: translateY(-5px);
@@ -144,9 +145,11 @@
 
         .build-card-content {
             padding: 20px;
-            flex: 1;
-            display: flex;
-            flex-direction: column;
+    		flex: 1;
+    		display: flex;
+    		flex-direction: column;
+    		min-height: 0;
+   			overflow: hidden;
         }
 
         .build-author {
@@ -829,7 +832,7 @@ function adjustBuildInfoSpacing() {
                 <div class="build-card" onclick="openModalByFirebaseId('${build.firebaseId}')">
                     <div class="build-card-content">
                         <div class="build-title">${build.buildname}</div>
-                        <div class="build-author">by @${parseMarkdown(build.author)}</div>
+                        <div class="build-author">by @${build.author}</div>
 						<div class="build-info">
                             ${build.weapon ? `<div class="build-info-item"><img src="${weaponIcons[build.weapon]}" alt="${build.weapon}"><div class="build-info-label">Weapon</div><div class="build-info-value">${build.weapon}</div></div>` : ''}
                             ${build.ability ? `<div class="build-info-item"><img src="${abilityIcons[build.ability]}" alt="${build.ability}"><div class="build-info-label">Ability</div><div class="build-info-value">${build.ability}</div></div>` : ''}
@@ -908,8 +911,8 @@ function adjustBuildInfoSpacing() {
 
             details.innerHTML = `
                 <h2 style="color: #059669; margin-bottom: 10px;">${build.buildname}</h2>
-                <p style="color: #999; margin-bottom: 20px;">Created by @${parseMarkdown(build.author)} on ${new Date(build.date).toLocaleDateString()}</p>
-                <p style="margin-bottom: 25px; line-height: 1.6;">${parseMarkdown(build.description)}</p>
+                <p style="color: #999; margin-bottom: 20px;">Created by @${build.author} on ${new Date(build.date).toLocaleDateString()}</p>
+                <p style="margin-bottom: 25px; line-height: 1.6;">${build.description}</p>
 
                 <h3 style="color: #059669; margin-bottom: 15px;">Loadout</h3>
                 
@@ -1113,6 +1116,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
