--- a/index.html
+++ b/index.html
@@ -169,12 +169,9 @@
     font-weight: bold;
     margin-bottom: 10px;
     color: #059669;
+    max-height: 3em;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    word-break: break-word;
 }
 
         .build-info {
@@ -1118,6 +1115,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
