--- a/index.html
+++ b/index.html
@@ -165,10 +165,7 @@
     color: #059669;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    word-break: break-word;
+    white-space: nowrap;
 }
 
 .build-author {
@@ -177,10 +174,7 @@
     margin-bottom: 15px;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    word-break: break-word;
+    white-space: nowrap;
 }
 
         .build-info {
@@ -1129,6 +1123,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
