--- a/index.html
+++ b/index.html
@@ -178,41 +178,44 @@
 }
 
         .build-info {
-            display: flex;
-            margin-bottom: 10px;
-            font-size: 14px;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
+    display: flex;
+    margin-bottom: 10px;
+    font-size: 12px;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 8px;
+    overflow: hidden;
+}
 
         .build-info-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            flex: 0 1 auto;
-            min-height: 80px;
-        }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 0 1 auto;
+    min-height: 70px;
+
 
         .build-info-item img {
-            width: 32px;
-            height: 32px;
-            object-fit: contain;
-            margin-bottom: 5px;
-        }
+    width: 28px;
+    height: 28px;
+    object-fit: contain;
+    margin-bottom: 3px;
+}
 
         .build-info-label {
-            color: #999;
-            font-size: 12px;
-            margin-bottom: 3px;
-        }
+    color: #999;
+    font-size: 10px;
+    margin-bottom: 2px;
+}
 
         .build-info-value {
-            color: #fff;
-            text-align: center;
-            word-break: break-word;
-            max-width: 70px;
-            line-height: 1.2;
-        }
+    color: #fff;
+    text-align: center;
+    word-break: break-word;
+    max-width: 55px;
+    line-height: 1.1;
+    font-size: 10px;
+}
 
         .build-card-footer {
             padding: 12px 20px;
@@ -1123,6 +1126,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
