--- a/index.html
+++ b/index.html
@@ -207,9 +207,8 @@
 .build-info-value {
     color: #fff;
     text-align: center;
-    word-break: normal;
-    overflow-wrap: break-word;
-    max-width: 70px;
+    word-break: break-word;
+    max-width: 65px;
     line-height: 1.15;
     font-size: 12px;
 }
@@ -1142,6 +1141,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
