--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     align-items: center;
     flex: 0 1 auto;
     min-height: 75px;
-    min-width: 75px;
+    min-width: 0;
 }
 
 .build-info-item img {
@@ -1141,6 +1141,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
