--- a/index.html
+++ b/index.html
@@ -208,9 +208,14 @@
     color: #fff;
     text-align: center;
     word-break: break-word;
+    hyphens: auto;
     max-width: 65px;
     line-height: 1.15;
     font-size: 12px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
         .build-card-footer {
@@ -1141,6 +1146,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
