--- a/index.html
+++ b/index.html
@@ -208,14 +208,12 @@
     color: #fff;
     text-align: center;
     word-break: break-word;
-    hyphens: auto;
     max-width: 65px;
     line-height: 1.15;
     font-size: 12px;
     overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    max-height: 2.3em;
 }
 
         .build-card-footer {
@@ -1146,6 +1144,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
