--- a/about.html
+++ b/about.html
@@ -69,27 +69,30 @@
             line-height: 1.6;
             margin-bottom: 15px;
             color: #ddd;
+            font-size: 18px;
         }
         .faq-item {
             margin-bottom: 30px;
         }
         .faq-question {
-            background-color: #141516;
-            padding: 15px;
-            border-radius: 4px;
-            border-left: 3px solid #059669;
-            color: #059669;
-            font-weight: bold;
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-        .faq-answer {
-            background-color: #0b0c0d;
-            padding: 15px;
-            border-radius: 4px;
-            line-height: 1.6;
-            color: #ddd;
-        }
+    background-color: #141516;
+    padding: 15px;
+    border-radius: 4px;
+    border-left: 3px solid #059669;
+    color: #059669;
+    font-weight: bold;
+    margin-bottom: 10px;
+    cursor: pointer;
+    font-size: 18px;
+}
+       .faq-answer {
+    background-color: #0b0c0d;
+    padding: 15px;
+    border-radius: 4px;
+    line-height: 1.6;
+    color: #ddd;
+    font-size: 18px;
+}
         .discord-link {
             display: inline-flex;
             align-items: center;
