--- a/about.html
+++ b/about.html
@@ -127,6 +127,10 @@
         
         <p>You can browse through the extensive build library, like builds you find interesting, share them with others, and even create your own builds to contribute to the community. If you have any questions, please refer to the FAQ section below.</p>
 
+        <p>This site is not endorsed by or affiliated with neither DoubleMoose Games nor The Arcade Crew. All game assets and images are copyrighted by their respective owners. </p>
+
+        <p>Created by @Wolfnacht</p>
+        
         <h2>Frequently Asked Questions</h2>
 
         <div class="faq-item">
@@ -154,6 +158,13 @@
             <div class="faq-question">How can I suggest changes?</div>
             <div class="faq-answer">
                 Join the Abyssus Wiki Discord server and head to the <strong><span style="color: #059669;">#builds-general</span></strong> channel to share your ideas and discuss builds with other community members.
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question">Is the website monetized or supported by ads?</div>
+            <div class="faq-answer">
+                 No. It’s ad-free and maintained using free-tier infrastructure and open web services.
             </div>
         </div>
 
