--- a/about.html
+++ b/about.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="faq-item">
-            <div class="faq-question">Is the website monetized or supported by ads?</div>
+            <div class="faq-question">Is the website monetized or using ads?</div>
             <div class="faq-answer">
                  No. It’s ad-free and maintained using free-tier infrastructure and open web services.
             </div>
