--- a/index.html
+++ b/index.html
@@ -1120,6 +1120,13 @@ function adjustBuildInfoSpacing() {
             }
         });
 
+		// Close modal when pressing ESC key
+window.addEventListener('keydown', function(event) {
+    if (event.key === 'Escape' || event.key === 'Esc') {
+        closeModal();
+    }
+});
+
   	// Text conversion
 	function parseMarkdown(text) {
     if (!text) return '';
@@ -1144,6 +1151,7 @@ function adjustBuildInfoSpacing() {
     </script>
 </body>
 </html>
+
 
 
 
