--- a/creator.html
+++ b/creator.html
@@ -301,7 +301,7 @@
             <a href="creator.html" class="active">Build Creator</a>
             <a href="about.html">About</a>
         </div>
-        <a href="https://discord.com/invite/rYHpyHeUzw" class="discord-link" target="_blank" rel="noopener noreferrer">
+        <a href="https://discord.gg/K6nbCvuPbm" class="discord-link" target="_blank" rel="noopener noreferrer">
     Join our Discord!
 			<img src="images/Discord_Icon.png" alt="Discord">
 </a>
@@ -1319,6 +1319,7 @@ async function addBuild() {
         </script>
     </body>
 </html>
+
 
 
 
