--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
             <a href="creator.html">Build Creator</a>
             <a href="about.html" class="active">About</a>
         </div>
-        <a href="https://discord.com/invite/rYHpyHeUzw" class="discord-link" target="_blank" rel="noopener noreferrer">
+        <a href="https://discord.gg/K6nbCvuPbm" class="discord-link" target="_blank" rel="noopener noreferrer">
     Join our Discord!
 			<img src="images/Discord_Icon.png" alt="Discord">
 </a>
@@ -194,7 +194,7 @@
         </div>
 
         <p style="margin-top: 40px; text-align: center;">
-            Have more questions? Join <a href="https://discord.com/invite/rYHpyHeUzw" class="discord-link-bottom"><img src="images/Discord_Icon.png" alt="Discord">Abyssus Wiki</a>
+            Have more questions? Join <a href="https://discord.gg/K6nbCvuPbm" class="discord-link-bottom"><img src="images/Discord_Icon.png" alt="Discord">Abyssus Wiki</a>
         </p>
     </div>
 </body>
