--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
             <a href="creator.html">Build Creator</a>
 			<a href="about.html">About</a>
         </div>
-		<a href="https://discord.com/invite/rYHpyHeUzw" class="discord-link" target="_blank" rel="noopener noreferrer">
+		<a href="https://discord.gg/K6nbCvuPbm" class="discord-link" target="_blank" rel="noopener noreferrer">
     Join our Discord!
 			<img src="images/Discord_Icon.png" alt="Discord">
 </a>
@@ -1177,6 +1177,7 @@ window.addEventListener('keydown', function(event) {
     </script>
 </body>
 </html>
+
 
 
 
