--- a/creator.html
+++ b/creator.html
@@ -334,38 +334,48 @@
     }
 
     /* Make creator container a flex container to reorder elements */
-    .creator-container {
-        display: flex;
-        flex-direction: column;
-    }
+.creator-container {
+    display: flex;
+    flex-direction: column;
+}
 
-    .creator-container h1 {
-        order: 1;
-    }
+.creator-container h1 {
+    order: 1;
+}
 
-    .creator-container > .form-section:nth-of-type(1) {
-        order: 2;
-    }
+/* Build Name and Author Name section */
+.creator-container > .form-section:nth-of-type(1) {
+    order: 2;
+}
 
-    .creator-container > .form-section:nth-of-type(2) {
-        order: 3;
-    }
+/* Weapon and Ability section */
+.creator-container > .form-section:nth-of-type(2) {
+    order: 3;
+}
 
-    .creator-container > .form-section:nth-of-type(3) {
-        order: 4;
-    }
+/* Charms section */
+.creator-container > .form-section:nth-of-type(3) {
+    order: 4;
+}
 
-    .creator-container > .form-section:nth-of-type(4) {
-        order: 5;
-    }
+/* Description section */
+.creator-container > .form-section:nth-of-type(4) {
+    order: 5;
+}
 
-    .creator-container > .form-section:nth-of-type(5) {
-        order: 6;
-    }
+/* Tags section */
+.creator-container > .form-section:nth-of-type(5) {
+    order: 6;
+}
 
-    .submit-btn {
-        order: 7;
-    }
+.submit-btn {
+    order: 7;
+}
+
+/* Tags Guide - move to bottom */
+.creator-container > div[style*="position: absolute"] {
+    order: 8;
+}
 
     /* Input Group - Stack vertically */
     .input-group {
@@ -1572,6 +1582,7 @@ async function addBuild() {
         </script>
     </body>
 </html>
+
 
 
 
