--- a/creator.html
+++ b/creator.html
@@ -344,28 +344,28 @@
         order: 2;
     }
 
-    /* Build Name and Author Name section */
-    .creator-container > .form-section:nth-of-type(1) {
+        /* Build Name and Author Name section */
+    .creator-container > .form-section:nth-child(5) {
         order: 3;
     }
 
     /* Weapon and Ability section */
-    .creator-container > .form-section:nth-of-type(2) {
+    .creator-container > .form-section:nth-child(6) {
         order: 4;
     }
 
     /* Charms section */
-    .creator-container > .form-section:nth-of-type(3) {
+    .creator-container > .form-section:nth-child(7) {
         order: 5;
     }
 
     /* Description section */
-    .creator-container > .form-section:nth-of-type(4) {
+    .creator-container > .form-section:nth-child(8) {
         order: 6;
     }
 
     /* Tags section */
-    .creator-container > .form-section:nth-of-type(5) {
+    .creator-container > .form-section:nth-child(9) {
         order: 7;
     }
 
@@ -1589,6 +1589,7 @@ async function addBuild() {
         </script>
     </body>
 </html>
+
 
 
 
